feat: added a handler to get a visualization of the tree for the frontend and the function of exporting and importing the tree
